# carmine

./: .env.example  Cargo.toml  Dockerfile  LICENSE-APACHE-2.0  README.md
src/: bridge.rs  discord.rs  main.rs  redis.rs  slack.rs
src/commands/: general.rs  link.rs  mod.rs  unlink.rs
src/sources/: discord.rs  mod.rs  slack.rs
