[package]
name = "carmine"
license = "MIT OR Apache-2.0"
authors = ["Anish Pallati <apallati@anish.land>"]
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
poise = "0.6.1"
slack-morphism = { version = "2.14.0", features = ["axum"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
